# max

./: .gitignore  CLAUDE.md  COMPARISON_NOTES.md  LICENSE  README.md  environment.yml  experiment_log.md  ogd_runs_progress.md  overnight_summary.md  pyproject.toml  requirements.txt  setup.py
configs/: bgd_loraxs_fomaml_adam_m001.json  bgd_loraxs_fomaml_adam_m005.json  bgd_loraxs_fomaml_adam_m01.json  bgd_loraxs_fomaml_adam_m05.json  bgd_loraxs_m001.json  bgd_loraxs_m005.json  bgd_loraxs_m01.json  bgd_loraxs_m05.json  bgd_loraxs_m075.json  cheetah.json  cheetah_fomaml.json  cheetah_meta.json  cheetah_sweep.yaml  drone.json  gridworld.json  gridworld_sanity.json  hopper.json  humanoid.json  linear.json  linear_sweep.yaml  linear_with_nn.json  lqr.json  merging_idm.json  pendulum.json  pretrain_dense_tdmpc2.json  pretrain_dense_tdmpc2_old.json  pretrain_ekf_fomaml_loraxs.json  pretrain_loraxs_bgd_fomaml.json  pretrain_loraxs_fomaml.json  pretrain_loraxs_fomaml_adam.json  pretrain_loraxs_maml.json  pretrain_loraxs_tdmpc2.json  pretrain_loraxs_tdmpc2_diag.json  pursuit_evasion.json  quadruped.json  stream_bgd_base_m01.json  stream_bgd_base_m05.json  stream_bgd_fomaml_m01.json  stream_bgd_fomaml_m05.json  stream_ekf.json  (+29 more)
docs/: 2026-01-07_active_vs_passive_learning.md  unicycle_mpc_implementation.md  wandb_visualizations.md
logs/: 2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  2026-04-18.md
max/: __init__.py  buffers.py  costs.py  critics.py  dynamics.py  dynamics_evaluators.py  dynamics_trainers.py  encoders.py  environments.py  estimators.py  (+14 more)
(+107 files in other folders)
